--- a/swagger/paths/contacts/{id}/patch.yaml
+++ b/swagger/paths/contacts/{id}/patch.yaml
@@ -5,23 +5,19 @@ operationId: updateContact
 description: 'Update contact by id'
 security:
   - bearerAuth: []
+parameters:
+  - in: path
+    name: id
+    required: true
+    schema:
+      type: string
+      example: '65ca67e7ae7f10c88b598384'
 requestBody:
   content:
     multipart/form-data:
       schema:
         type: object
-        required:
-          - _id
-          - userId
         properties:
-          _id:
-            description: "Contact id"
-            type: string
-            example: 65e4decdd286b30065d54af9
-          userId:
-            description: "User id"
-            type: string
-            example: 65e4decdd286b30065d54af9
           name:
             description: "Contact name"
             type: string
