--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
+    "nodejs-basics": "file:",
     "nodemailer": "^6.9.14",
     "pino-http": "^10.1.0",
     "swagger-ui-express": "^5.0.1"
